--- a/portfolio/framework/test.html
+++ b/portfolio/framework/test.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Framework Test Page</title>
-  <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <title>Framework Test Page</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
-  <div class="grid">
-    <div class="row">
-      <div class="col-2">2 Columns</div>
-      <div class="col-10">10 Columns</div>
+    <div class="grid">
+        <div class="row">
+            <div class="col-6"><img src="http://via.placeholder.com/100x100"></div>
+            <div class="col-6" style="text-align: right">
+                <h1>Jane Doette</h1>
+                <h3>Front-end Ninja</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12"><img src="http://via.placeholder.com/900x350"></div>
+        </div>
+        <div class="row">
+            <div class="col-12"><h2>Featured work</h2></div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <img src="http://via.placeholder.com/250x200">
+                <div>Appify</div>
+                <div><a href="#">Link to project</a></div>
+            </div>
+            <div class="col-4">
+                <img src="http://via.placeholder.com/250x200">
+                <div>Appify</div>
+                <div><a href="#">Link to project</a></div>
+            </div>
+            <div class="col-4">
+                <img src="http://via.placeholder.com/250x200">
+                <div>Appify</div>
+                <div><a href="#">Link to project</a></div>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-9">9 Columns</div>
-    </div>
-    <div class="row">
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-    </div>
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-6">6 Columns</div>
-      <div class="col-3">3 Columns</div>
-    </div>
-  </div>
 </body>
 </html>
